objects/amazonconnect__AWS_CtiAdapter__c.object
<CustomObject>
    <fields>
        <fullName>amazonconnect__CallLogAction__c</fullName>
        <label>Call Log Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Start</fullName>
                    <default>true</default>
                    <label>Start</label>
                </value>
                <value>
                    <fullName>End</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amazonconnect__CallLogAutoCreate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Call Log Auto Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amazonconnect__CallLogCallTypes__c</fullName>
        <label>Call Log Call Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                    <default>true</default>
                    <label>Inbound</label>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Callback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amazonconnect__CallLogObjectType__c</fullName>
        <label>Call Log Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Task</fullName>
                    <default>true</default>
                    <label>Task</label>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amazonconnect__ConnectInstance__c</fullName>
        <externalId>true</externalId>
        <label>Connect Instance</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>amazonconnect__CustomRingtone__c</fullName>
        <label>Custom Ringtone</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>amazonconnect__EnableSoftphonePopout__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Softphone Popout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amazonconnect__PresenceSyncEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Presence Sync Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amazonconnect__ScreenpopAction__c</fullName>
        <label>Screenpop Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Connecting</fullName>
                    <default>true</default>
                    <label>Connecting</label>
                </value>
                <value>
                    <fullName>Connected</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amazonconnect__UserDefined__c</fullName>
        <description>User defined configuration</description>
        <label>User Defined</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>AWS CTI Adapter</label>
    <listViews>
        <fullName>amazonconnect__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AWS CTI Adapter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AWS CTI Adapters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>